# UNION-BANK-

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  SECURITY.md  SUPPORT.md  account.py  admin.py  alembic.ini  api.py  bank.py  commitlint.config.js  config.py  container.py  database.py  docker-compose.prod.yml  docker-compose.yml  e2e_test.py  logger.py  main.py  memory.md  models.py  package-lock.json  package.json  pyproject.toml  repositories.py  requirements-lock.txt  requirements.txt  seed_data.py  services.py  (+5 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.husky/: pre-commit
alembic/: env.py
api/: __init__.py  common.py  models.py  v2.py
application/: interfaces.py  notifications.py  services.py
data/: bank.jsonl  union_bank.db  union_bank.db-shm  union_bank.db-wal
docs/: ADR-0001-consolidate-service-layer.md  ADR-0002-security-hardening.md  ADR-0004-data-retention.md  ADR-0005-database-migration.md  BASELINE_METRICS.md  BASELINE_VERSIONS.md  CASE_STUDY.md  CURRENT_STATE.md  E2E_TEST_STRATEGY.md  INVENTORY.md  RESUME_BULLETS.md  RUNBOOK.md  SELF_AUDIT.md  THREAT_MODEL.md  TS_MIGRATION.md  api-map.md  architecture.md  database-map.md  dependency-graph.md  openapi.json  routes.md
domain/: entities.py
frontend/: .gitignore  index.html  package-lock.json  package.json  replace_flags.py  vite.config.js
infrastructure/: cache.py  database.py  persistence.py  repositories.py
interfaces/: __init__.py
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
monitoring/: prometheus.yml
scripts/: analyzr.py  docker-entrypoint.sh  git-safe-commit.sh  migrate_json_to_sqlite.py
src/: account.py  admin.py  bank.py  config.py  container.py  database.py  e2e_test.py  logger.py
static/: style.css
templates/: _balance_card.html  _search_results.html  admin_account_detail.html  admin_accounts.html  admin_change_password.html  admin_dashboard.html  admin_delete.html  admin_freeze.html  admin_loans.html  admin_login.html  admin_search.html  admin_statistics.html  admin_transactions.html  apply_interest.html  base.html  change_password.html  dashboard.html  deposit.html  index.html  loan_apply.html  loan_detail.html  loans.html  login.html  notification_preferences.html  notifications.html  profile.html  register.html  savings_goal_form.html  savings_goals.html  statement.html  transfer.html  withdraw.html
tests/: __init__.py  conftest.py  fakes.py  test_analyzr.py  test_api_integration.py  test_coverage_gaps.py  test_edge_cases.py  test_features.py  test_htmx_integration.py  test_integration.py  test_migrations.py  test_password_leak.py  test_property_based.py  test_security.py  (+3 more)
(+137 files in other folders)
